--- a/public/css/login.css
+++ b/public/css/login.css
@@ -64,19 +64,21 @@ body {
 	& .btn-login:hover {
 		background-color: #098181;
 	}
-	& #error-message {
-		margin-top: 6px;
-		text-align: center;
-		border-radius: 16px;
-		border: none;
-		background-color: rgb(255, 174, 0);
-		padding: 10px 10px;
-		color: white;
-		font-size: 15px;
-	}
+
 	& .forgot-password {
 		text-align: center;
 		font-size: 1rem;
 		color: #a0a0a0;
 	}
+}
+#error-message {
+	display: block;
+	margin-top: 6px;
+	text-align: center;
+	border-radius: 16px;
+	border: none;
+	background-color: rgb(255, 174, 0);
+	padding: 10px 10px;
+	color: white;
+	font-size: 15px;
 }
